# pandora

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
src/: csv_parser.rs  data.rs  format.rs  json_parser.rs  lib.rs  logfmt_parser.rs  main.rs  orchestrator.rs  parser.rs  simd_scan.rs  structured.rs  structured_orchestrator.rs
tests/: bench.py
