[package]
name = "pandoraslogs"
version = "0.1.1"
edition = "2024"
description = "High-performance SIMD log parser achieving 3.2-4.0+ GB/s throughput"
license = "GPL-2.0"
repository = "https://github.com/Lunyn-HFT/pandora"

[[bin]]
name = "pandoras-logs"
path = "src/main.rs"

# [[bin]]
# name = "generate-logs"
# path = "src/bin/generate_logs.rs"

[[bin]]
name = "scan-newlines"
path = "src/bin/scan_newlines.rs"

[[bin]]
name = "generate-structured-logs"
path = "src/bin/generate_structured_logs.rs"

[dependencies]
memmap2 = "0.9"
memchr = "2.8"
libc = "0.2"
core_affinity = "0.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"
